kantin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kantin-ingress
  annotations:
    # Hapus atau beri komentar pada rewrite-target jika rute di Flask sudah lengkap dengan /api
    # nginx.ingress.kubernetes.io/rewrite-target: / 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
